[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"

[[bin]]
name = "aoc1"
path = "src/aoc1.rs"

[[bin]]
name = "aoc2"
path = "src/aoc2.rs"

[[bin]]
name = "aoc3"
path = "src/aoc3.rs"

[[bin]]
name = "aoc4"
path = "src/aoc4.rs"

[[bin]]
name = "aoc5"
path = "src/aoc5.rs"

[[bin]]
name = "aoc6"
path = "src/aoc6.rs"

