[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
num = "0.3.1"

[[bin]]
name = "aoc1"
path = "src/aoc1.rs"

[[bin]]
name = "aoc2"
path = "src/aoc2.rs"

[[bin]]
name = "aoc3"
path = "src/aoc3.rs"

[[bin]]
name = "aoc4"
path = "src/aoc4.rs"

[[bin]]
name = "aoc5"
path = "src/aoc5.rs"

[[bin]]
name = "aoc6"
path = "src/aoc6.rs"

[[bin]]
name = "aoc7"
path = "src/aoc7.rs"

[[bin]]
name = "aoc8"
path = "src/aoc8.rs"

[[bin]]
name = "aoc9"
path = "src/aoc9.rs"

[[bin]]
name = "aoc10"
path = "src/aoc10.rs"

[[bin]]
name = "aoc11"
path = "src/aoc11.rs"

[[bin]]
name = "aoc12"
path = "src/aoc12.rs"

[[bin]]
name = "aoc13"
path = "src/aoc13.rs"

[[bin]]
name = "aoc14"
path = "src/aoc14.rs"

[[bin]]
name = "aoc15"
path = "src/aoc15.rs"
